<resources>
    <string name="app_name">MoviesApp</string>
    <string name="title_movie">Peliculas</string>
    <string name="title_favorites">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_genres">Generos</string>
    <string name="txt_genres_default">Animacion - Familia - Aventura - Fantasia - Comedia</string>
    <string name="txt_description">Descripcion</string>
    <string name="txt_overview">Mientras trabajan en una averia los hermanos Mario encontraran una entrada a otro mundo, ven y unete a sus aventuras en este nuevo mundo.</string>
    <string name="txt_movie_title">Movie Title</string>
    <string name="txt_date_description">Fecha de lanzamiento:</string>
    <string name="txt_date_released">Miercoles 05 de Abril del 2023</string>
</resources>