<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="10dp">
        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/title_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_movie_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/iv_movie"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_date_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_date_description"
            android:textColor="#B1B1B1"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/iv_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_title_movie"
            />
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_date_released"
            android:textColor="#B1B1B1"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@id/tv_date_description"
            app:layout_constraintTop_toBottomOf="@id/tv_date_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_genres_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_genres"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="350dp"
            android:text="@string/txt_genres_default"
            android:textColor="#B1B1B1"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/tv_genres_title"
            app:layout_constraintTop_toBottomOf="@id/tv_genres_title"
            />
        <TextView
            android:id="@+id/tv_overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/tv_genres"
            app:layout_constraintTop_toBottomOf="@id/tv_genres"
            />
        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_overview"
            android:textColor="#B1B1B1"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/tv_overview_title"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
            />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_selector"
            android:layout_margin="10dp"
            android:contentDescription="@string/title_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>